--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body {
 h1 {
     color: white;
     text-align: center;
-    font-weight: 200px;
+    font-weight: bolder;
+
 }
 
 p {
@@ -18,4 +19,19 @@ p {
 
 .top-image {
     background-image: url(image/donation6.jpg);
+    background-repeat: no-repeat;
+
+
+
+}
+
+.donate-link {
+    font-size: 16px;
+    font-weight: 20px;
+    color: azure;
+    text-decoration: none;
+    text-align: center;
+    padding: 5px 7px 5px 7px;
+    background-color: rgb(209, 63, 63);
+
 }
