--- a/style.css
+++ b/style.css
@@ -54,6 +54,7 @@ footer {
     color: black;
     padding-top: 30px;
     display: flex;
+    text-align: center;
 }
 
 input {
@@ -72,4 +73,34 @@ button {
     border: 0pc;
     padding: 15px 15px;
 
+}
+
+.donate-plan {
+    padding-top: 30px;
+    text-align: center;
+}
+
+.flexible {
+    display: flex;
+    text-decoration: none;
+    width: 100%;
+    height: 10pc;
+    padding: 20px 20px;
+
+}
+
+#pink {
+    background-color: rgb(241, 213, 234);
+    margin: 5px;
+
+}
+
+#red {
+    background-color: rgb(240, 203, 203);
+    margin: 5px;
+}
+
+#yellow {
+    background-color: rgb(240, 239, 195);
+    margin: 5px;
 }
