--- a/style.css
+++ b/style.css
@@ -83,7 +83,6 @@ button {
 .flexible {
     display: flex;
     text-decoration: none;
-    width: 100%;
     height: 10pc;
     padding: 20px 20px;
 
@@ -103,4 +102,22 @@ button {
 #yellow {
     background-color: rgb(240, 239, 195);
     margin: 5px;
+}
+
+.third-part {
+    width: 50%;
+    padding-top: 20px;
+    padding: 5px;
+}
+
+.third-part img {
+    width: 50%;
+    padding-top: 20px;
+    padding: 5px;
+}
+
+.reason {
+    display: flex;
+    padding-top: 20px;
+
 }
